--- a/public/stylesheets/components/_contacts.scss
+++ b/public/stylesheets/components/_contacts.scss
@@ -6,6 +6,8 @@
   .title {
     color: $contact-group-title-color;
     background-color: $contact-group-title-bk-color;
+    font-size: $contact-group-title-font-size;
+    font-weight: bold;
   }
 
   .person {
