--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -127,11 +127,20 @@ $slide-btn-bck-color: color('grey','lighten-5');
 
 
 //telephone
+$menu-root-header-font-size: 18px;
+$menu-root-header-padding: 7.5px 0;
+$menu-root-header-color: $company-theme-color;
+$menu-root-padding: 20px 20px 0 0;
 $contact-group-margin: 15px 0 0 10px;
 $contact-group-padding: 0 15px;
-$contact-group-title-color: color('grey','lighten-4');
-$contact-group-title-bk-color: $company-theme-color;
+$contact-group-title-color: $company-theme-color;
+$contact-group-title-bk-color: none;
+$contact-group-title-font-size: 18px;
 $person-margin: 10px 0;
+$sidebar-link-bk-color: color('blue','lighten-5');
+$sidebar-link-border: 2px solid transparent;
+$sidebar-link-border-hover: 2px solid $company-theme-color;
+$sidebar-link-cur-color: lighten($company-theme-color,10%);
 //footer
 $default-footer-color: $nav-second-color;
 $default-footer-bk-color: $company-theme-color;
