--- a/views/tele.jade
+++ b/views/tele.jade
@@ -18,8 +18,7 @@ body
     //include include/footer
 script(src='/javascript/includes/jquery-1.12.4.min.js')
 script(src='/javascript/includes/smooth-scroll.min.js')
+script(src='/javascript/includes/intranet.js')
 script(src='/javascript/pages/telephoneSearch.js')
 
 
-script.
-    smoothScroll.init({offset: 100});
