--- a/views/uploadNews.jade
+++ b/views/uploadNews.jade
@@ -1,3 +1,9 @@
 //
    Created by itdwyy on 1/16/2017.
 
+doctype html
+html(lang="en")
+    include include/header
+body
+    .wrapper-960.body-content
+        h1.pageheader UpdateNews
