--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2209,11 +2209,25 @@ body {
     display: none;
     margin: 0;
     padding: 0;
-    background-color: #fff;
-    border: 1px solid #e0e0e0;
+    margin-top: -5px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
     list-style: none; }
+    .nav-list-h .drp-list-v:before {
+      content: "";
+      position: absolute;
+      top: -10px;
+      left: 20px;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-bottom: 10px solid #f5f5f5; }
     .nav-list-h .drp-list-v .drp-list-item, .nav-list-h .drp-list-v .drp-list-item li, .nav-list-h .drp-list-v .drp-list-item a {
+      padding: 0 15px;
       color: #292059; }
+    .nav-list-h .drp-list-v .drp-list-item:hover {
+      background-color: #292059; }
+      .nav-list-h .drp-list-v .drp-list-item:hover a {
+        color: #fafafa; }
 
 .nav-form {
   position: relative;
@@ -2254,6 +2268,7 @@ body {
 .autoSearchList {
   position: absolute;
   display: block;
+  margin-top: -15px;
   width: 100%;
   background-color: #fafafa; }
   .autoSearchList.nav-searchList {
@@ -2263,23 +2278,27 @@ body {
   .autoSearchList .resultItem {
     position: relative;
     display: block;
-    padding: 5px 5px;
+    padding: 7.5px 5px;
     text-decoration: none;
     text-align: left;
     vertical-align: top;
+    border-bottom: 1px solid #e0e0e0;
     *zoom: 1; }
     .autoSearchList .resultItem:before, .autoSearchList .resultItem:after {
       content: "";
       display: table; }
     .autoSearchList .resultItem:after {
       clear: both; }
+    .autoSearchList .resultItem .string {
+      white-space: nowrap; }
     .autoSearchList .resultItem .string, .autoSearchList .resultItem .num {
       position: relative;
       top: 0;
       display: block;
       float: left;
       height: 100%;
-      width: 33%;
+      min-height: 1px;
+      width: 150px;
       padding: 0 5px;
       word-wrap: break-word; }
     .autoSearchList .resultItem .bold {
