--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -12,6 +12,7 @@
 @import "components/card";
 @import "components/slidebar";
 @import "components/menu";
+@import "components/tab";
 @import "components/contacts";
 @import "components/footer";
 //items
