--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -6,11 +6,11 @@
         #slick-left.slide-btn.big.left.center-v.zindexthetop
         #slick-right.slide-btn.big.right.center-v.zindexthetop
     .right-new-panel
-        .slide-tab-bar.clear
-            .slide-item
-                span Latest
-            .slide-item
-                span Top
+        ul.tabs
+            li.tab
+                a(href="#lastNews") Latest
+            li.tab
+                a(href="#lastNews") Top Read
         .news-list.clearfix.clear
             a.card-h
                 .txt
