--- a/public/stylesheets/components/_nav.scss
+++ b/public/stylesheets/components/_nav.scss
@@ -41,6 +41,17 @@
   .nav-item {
     display: block;
     float: left;
+    &:hover > a {
+      color: $nav-item-hover-color;
+    }
+    &.has-dropdown {
+      &:hover {
+        &>a{
+          color: $drop-down-list-color;
+        }
+        background-color: $drop-down-list-bg-color;
+      }
+    }
     a {
       display: block;
       text-decoration: none;
@@ -51,6 +62,7 @@
       cursor: pointer;
       font-size: $nav-item-font-size;
       font-weight: bold;
+
     }
     //hover add cur
     &.cur {
@@ -68,24 +80,26 @@
     display: none;
     margin: 0;
     padding: 0;
-    margin-top: -5px;
     background-color: $drop-down-list-bg-color;
     //border: $drop-down-list-border;
-    border-radius: 5px;
+    border-top: none;
     list-style: none;
-    &:before {
-      content: "";
-      position: absolute;
-      top: -10px;
-      left: 20px;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 10px solid $drop-down-list-bg-color;
-    }
+    box-shadow: 0 2px 10px rgba(0,0,0,.2);
+    //&:before {
+    //  content: "";
+    //  position: absolute;
+    //  top: -10px;
+    //  left: 20px;
+    //  border-left: 10px solid transparent;
+    //  border-right: 10px solid transparent;
+    //  border-bottom: 10px solid $drop-down-list-bg-color;
+    //}
 
     .drp-list-item {
       &,li,a {
-        padding: 0 15px;
+        line-height: $nav-second-height;
+        font-size: $nav-item-font-size;
+        padding: 0 7.5px;
         color: $drop-down-list-color
       }
       &:hover {
