--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2190,6 +2190,12 @@ body {
   .nav-list-h .nav-item {
     display: block;
     float: left; }
+    .nav-list-h .nav-item:hover > a {
+      color: #d4d4d4; }
+    .nav-list-h .nav-item.has-dropdown:hover {
+      background-color: #f5f5f5; }
+      .nav-list-h .nav-item.has-dropdown:hover > a {
+        color: #292059; }
     .nav-list-h .nav-item a {
       display: block;
       text-decoration: none;
@@ -2209,20 +2215,14 @@ body {
     display: none;
     margin: 0;
     padding: 0;
-    margin-top: -5px;
     background-color: #f5f5f5;
-    border-radius: 5px;
-    list-style: none; }
-    .nav-list-h .drp-list-v:before {
-      content: "";
-      position: absolute;
-      top: -10px;
-      left: 20px;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 10px solid #f5f5f5; }
+    border-top: none;
+    list-style: none;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); }
     .nav-list-h .drp-list-v .drp-list-item, .nav-list-h .drp-list-v .drp-list-item li, .nav-list-h .drp-list-v .drp-list-item a {
-      padding: 0 15px;
+      line-height: 37px;
+      font-size: 14px;
+      padding: 0 7.5px;
       color: #292059; }
     .nav-list-h .drp-list-v .drp-list-item:hover {
       background-color: #292059; }
