--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -9,7 +9,7 @@
             input#telSearch.search
             #telResult.autoSearchList.nav-searchList.z-depth-2
             i.material-icons.search-icon &#xE8B6;
-.nav-list-h.second-nav.clear.clearfix.zindexsecond
+.nav-list-h.second-nav.clear.clearfix.zindexsecond.z-depth-1
     ul.wrapper-960.none-padding
         -
             var departments = ['General Affairs(GAD)','Commercial(COM)','Finance(FIN)','Flight Operations(FLT)'];
@@ -20,13 +20,13 @@
             a(href='/tele') Telephone
         li.nav-item.has-dropdown
             a(href='#') Department
-                ul.drp-list-v.z-depth-3
+                ul.drp-list-v
                     each item in departments
                         li.drp-list-item
                             a(href='#')= item
         li.nav-item.has-dropdown
             a(href='#') Services
-            ul.drp-list-v.z-depth-3
+            ul.drp-list-v
                 each item in services
                     li.drp-list-item
                         a(href='#')= item
