tele auto update link stage

--- a/public/stylesheets/components/_general.scss
+++ b/public/stylesheets/components/_general.scss
@@ -7,9 +7,11 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit;
+  font-family: Arial, Arial, Helvetica, sans-serif;
 }
 body {
   overflow: scroll;
+  font-family: Arial, Arial, Helvetica, sans-serif;
 }
 .wrapper-960 {
   position: relative;
