--- a/public/stylesheets/telephone/telephone.scss
+++ b/public/stylesheets/telephone/telephone.scss
@@ -70,4 +70,5 @@ $sidebar-link-color: color('grey','darken-3');
 
 #contacts-content {
   top: $nav-height + $nav-second-height;
+  margin-bottom: 150px;
 }
