--- a/views/include/header.jade
+++ b/views/include/header.jade
@@ -2,6 +2,7 @@
 head
     title #{title}
     <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
+    //<meta name="viewport" content="width=device-width, initial-scale=1">
     link(rel='stylesheet', href='stylesheets/intranet.css')
     link(rel='stylesheet', href='iconfont/material-icons.css')
 
