--- a/views/tele.jade
+++ b/views/tele.jade
@@ -12,7 +12,9 @@ body
                 .menu-root
                     .header Headquarter
                     ul#headQuarter
-                .header
+                .menu-root
+                    .header Outstaion
+                    ul#outStation
 
         #contacts-content
     //include include/footer
