--- a/public/stylesheets/components/_contacts.scss
+++ b/public/stylesheets/components/_contacts.scss
@@ -4,14 +4,18 @@
   padding: $contact-group-padding;
 
   .title {
+    padding-left: 5px;
     color: $contact-group-title-color;
     background-color: $contact-group-title-bk-color;
     font-size: $contact-group-title-font-size;
     font-weight: bold;
+    border-left: 5px solid $company-theme-color;
   }
 }
 
 table.contact-table {
+  margin-top: 30px;
+  width: 100%;
   thead {
     th {
       text-align: left;
@@ -19,12 +23,14 @@ table.contact-table {
   }
   tbody {
     tr.person {
+      width: 100%;
       &:nth-child(odd){
         background-color: #f2f2f2;
       }
       td {
+        display: table-cell;
+        padding: 7.5px 0 7.5px 15px;
         span.name {
-          font-size: 15px;
           font-weight: bold;
           display: block;
         }
@@ -32,6 +38,25 @@ table.contact-table {
           font-size: 12px;
           font-weight: normal;
         }
+        span.tele,span.name,span.email {
+          font-size: 13px;
+        }
+        .email {
+          a{
+            font-size: 14px;
+            text-decoration: none;
+            color: color('grey','darken-4');
+          }
+        }
+      }
+      td.td-name {
+        width: 30%;
+      }
+      td.td-tele {
+        width: 30%;
+      }
+      td.td-email {
+        width: 39%;
       }
     }
   }
