--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -147,6 +147,7 @@ $menu-sub-margin: 0;
 
 $contact-group-margin: 65px 0 0 10px;
 $contact-group-padding: 0 15px;
+$contact-person-padding: 15px 0;
 $contact-group-title-color: $company-theme-color;
 $contact-group-title-bk-color: none;
 $contact-group-title-font-size: 18px;
