--- a/views/tele.jade
+++ b/views/tele.jade
@@ -9,12 +9,10 @@ body
     .tele-content.wrapper-960
         .sidebar
             .nav-list-v.teleList.left
-                .menu-root
-                    .header Headquarter
-                    ul#headQuarter
-                .menu-root
-                    .header Outstaion
-                    ul#outStation
+                .menu-header Headquarter
+                    ul#headQuarter.menu-root
+                .menu-header Outstaion
+                    ul#outStation.menu-root
 
         #contacts-content
     //include include/footer
