--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2280,6 +2280,7 @@ body {
   .autoSearchList .resultItem {
     position: relative;
     display: block;
+    font-size: 13px;
     padding: 7.5px 5px;
     text-decoration: none;
     text-align: left;
@@ -2293,6 +2294,8 @@ body {
       clear: both; }
     .autoSearchList .resultItem .string {
       white-space: nowrap; }
+      .autoSearchList .resultItem .string.name {
+        white-space: normal; }
     .autoSearchList .resultItem .string, .autoSearchList .resultItem .num {
       position: relative;
       top: 0;
@@ -2379,6 +2382,20 @@ body {
   display: block;
   height: 100%;
   list-style: none; }
+  .menu-root .sidebar-link {
+    position: relative;
+    padding: 0;
+    width: 100%; }
+    .menu-root .sidebar-link, .menu-root .sidebar-link a {
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 35px;
+      color: #424242;
+      border-bottom: 2px solid transparent; }
+    .menu-root .sidebar-link:hover {
+      color: #3a2d7f; }
+    .menu-root .sidebar-link.active {
+      color: #292059; }
   .menu-root a {
     text-decoration: none;
     cursor: pointer; }
@@ -2397,13 +2414,15 @@ body {
     .menu-root .menu-sub.active {
       display: block; }
       .menu-root .menu-sub.active .section-link.active {
-        color: #4c3ba4;
-        border-left: 2px solid #4c3ba4; }
+        color: #292059;
+        border-left: 2px solid #292059; }
     .menu-root .menu-sub .section-link {
       display: block;
       color: #424242;
       border: 2px solid transparent;
       padding: 0 7.5px; }
+      .menu-root .menu-sub .section-link:hover {
+        color: #3a2d7f; }
 
 .tabs {
   position: relative;
@@ -2603,6 +2622,40 @@ table.contact-table {
       width: 100%;
       height: 100%; }
 
+.popbox {
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  margin-left: -200px;
+  display: none;
+  width: 400px;
+  height: auto;
+  z-index: 10001; }
+  .popbox .title {
+    position: relative;
+    top: 0;
+    font-size: 18px;
+    color: #292059;
+    clear: both; }
+
+.cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  background-color: #757575;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  /* IE 5-7 */
+  filter: alpha(opacity=60);
+  /* Netscape */
+  -moz-opacity: 0.6;
+  /* Safari 1.x */
+  -khtml-opacity: 0.6;
+  /* Good browsers */
+  opacity: 0.6;
+  z-index: 10000; }
+
 .news-area {
   margin-top: 119px;
   padding-bottom: 30px; }
@@ -2751,18 +2804,6 @@ table.contact-table {
     display: table; }
   .sidebar:after {
     clear: both; }
-  .sidebar .sidebar-link {
-    position: relative;
-    padding: 0;
-    width: 100%; }
-    .sidebar .sidebar-link, .sidebar .sidebar-link a {
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 35px;
-      color: #424242;
-      border-bottom: 2px solid transparent; }
-    .sidebar .sidebar-link:hover {
-      border-bottom: 2px solid #292059; }
 
 .main-content {
   position: fixed;
