--- a/public/stylesheets/components/_menu.scss
+++ b/public/stylesheets/components/_menu.scss
@@ -10,6 +10,24 @@
   display: block;
   height: 100%;
   list-style: none;
+  .sidebar-link {
+    position: relative;
+    padding: $sidebar-link-padding;
+    width: 100%;
+    &,& a {
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 35px;
+      color: $sidebar-link-color;
+      border-bottom: $sidebar-link-border;
+    }
+    &:hover {
+      color: $sidebar-hover-color;
+    }
+    &.active {
+      color: $sidebar-active-color;
+    }
+  }
   a {
     text-decoration: none;
     cursor: pointer;
@@ -43,6 +61,9 @@
       color: $section-link-color;
       border: 2px solid transparent;
       padding: $section-link-padding;
+      &:hover {
+        color: $sectionr-link-hover-color;
+      }
     }
   }
 
