--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -17,9 +17,9 @@
 @import "components/footer";
 //items
 @import "components/slideimgs";
-
+@import "components/popbox";
 //pages
 @import "pages/index";
 @import "pages/updateNews";
 @import "telephone/telephone";
-@import "pages/listapi";
+
