--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -1,14 +1,15 @@
 //
    Created by itdwyy on 12/2/2016.
+#telecover.cover
 .nav.zindexthetop
-    .wrapper-960
+    .wrapper-960.zindexMost
         a.nav-logo.cp-logo
         a(href='#').icon-group-h.right
             i.material-icons.blue-icon &#xE0BE;
-        form.nav-form.right
+        form.nav-form.right.zindexthetop.zindexMost
             input#telSearch.search
-            #telResult.autoSearchList.nav-searchList.z-depth-2
             i.material-icons.search-icon &#xE8B6;
+            #telResult.autoSearchList.nav-searchList.z-depth-2.zindexMost
 .nav-list-h.second-nav.clear.clearfix.zindexsecond.z-depth-1
     ul.wrapper-960.none-padding
         -
