--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -5,33 +5,10 @@
         #mainNews.img-list
         #slick-left.slide-btn.big.left.center-v.zindexthetop
         #slick-right.slide-btn.big.right.center-v.zindexthetop
-    .right-new-panel
-        ul.tabs
+    #lastnews.right-new-panel
+        ul#lastnews-tab.tabs
             li.tab
                 a(href="#lastNews") Latest
             li.tab
                 a(href="#lastNews") Top Read
-        .news-list.clearfix.clear
-            a.card-h
-                .txt
-                    .title Underestimate female car buyers
-                    .sub
-                        |Yes,tha's right.I like to 'pay it forward' as
-                        |it were,by saunteriling into a car de...
-                .img
-                    img( src='http://t06.deviantart.net/Pqe_1kSjPeaAtqqUYyrtJklPikE=/fit-in/150x150/filters:no_upscale():origin()/pre15/2c7e/th/pre/f/2015/023/7/b/7b7dbdfb88244fe68b313c7ba4ff55c9-d8ernoy.jpg')
-            a.card-h
-                .txt
-                    .title Men who watch more porn may be more sexist: study
-                    .sub
-                        |A new Danish study claims that straight men who watch
-                        |a lot of porn may have...
-                .img
-                    img(src='http://superselected.com/wp-content/uploads/2014/08/Martha-Jackson-Jarvis-Works-on-Paper-Art-01-150x98.jpg')
-            a.card-h
-                .txt
-                    .title Business fly offer advice for stress-free travel
-                    .sub
-                        |For stress travel, take cues from frequent flyers like business travelers..
-                .img
-                    img(src='http://t15.deviantart.net/npebGiv_akiu_IpQ9iBYB5L8sLI=/fit-in/150x150/filters:no_upscale():origin()/pre07/6d1e/th/pre/i/2014/035/2/e/modern_home_office_art_oil_painting_abstract_photo_by_mostwantedmodernart-d750fw9.jpg')
+        #lastnews-list.news-list.clearfix.clear
