--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,9 @@ html(lang="en")
 body
     include include/nav
     include include/newarea
+    include include/APIList
     include include/slide-show-or
 script(src='/javascript/includes/jquery-1.12.4.min.js')
+//script(src='/javascript/includes/jquery-1.7.min.js')
 script(src='/javascript/includes/intranet.js')
 script(src='/javascript/pages/index.js')
