--- a/public/stylesheets/components/_popbox.scss
+++ b/public/stylesheets/components/_popbox.scss
@@ -1,24 +1,48 @@
 .popbox {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 30%;
   margin-left:-($popbox-width/2);
   display: none;
   width: $popbox-width;
   height: auto;
+  background-color: $popbox-bk-color;
   z-index: 10001;
   .title {
     position: relative;
+    padding: $popbox-title-padding;
     top: 0;
     font-size: $popbox-title-font-size;
     color: $popbox-font-color;
     clear: both;
+    background-color: $popbox-title-background-color;
   }
-
+  .infoTitle {
+    text-align: right;
+  }
+  .info{
+    text-align: left;
+  }
+  &.active {
+    display: block;
+  }
+  .popContent {
+    display: block;
+    padding: $popbox-content-padding;
+  }
+  .material-icons.closebtn {
+    position: absolute;
+    right: 5px;
+    top: 6px;
+    cursor: pointer;
+  }
 }
 
 .cover {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 100%;
@@ -26,4 +50,7 @@
   background-color: $cover-bk-color;
   @include opacity(.6);
   z-index: 10000;
+  &.active {
+    display: block;
+  }
 }
