--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2358,6 +2358,8 @@ body {
     float: left;
     min-height: 1px;
     *zoom: 1;
+    width: 149.99px;
+    height: 98px;
     float: left; }
     .card-h .img:before, .card-h .img:after {
       content: "";
@@ -2368,7 +2370,7 @@ body {
 .contact-group {
   position: relative;
   display: block;
-  margin: 65px 0 0 10px; }
+  margin: 45px 0 0 10px; }
 
 .menu-header {
   padding: 7.5px 0;
@@ -2472,7 +2474,7 @@ body {
 .contact-group {
   position: relative;
   display: block;
-  margin: 65px 0 0 10px;
+  margin: 45px 0 0 10px;
   padding: 0 15px; }
   .contact-group .title {
     padding-left: 5px;
@@ -2623,28 +2625,48 @@ table.contact-table {
       height: 100%; }
 
 .popbox {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 30%;
-  margin-left: -200px;
+  margin-left: -250px;
   display: none;
-  width: 400px;
+  width: 500px;
   height: auto;
+  background-color: #fafafa;
   z-index: 10001; }
   .popbox .title {
     position: relative;
+    padding: 15px 5px 5px 25px;
     top: 0;
     font-size: 18px;
     color: #292059;
-    clear: both; }
+    clear: both;
+    background-color: #e0e0e0; }
+  .popbox .infoTitle {
+    text-align: right; }
+  .popbox .info {
+    text-align: left; }
+  .popbox.active {
+    display: block; }
+  .popbox .popContent {
+    display: block;
+    padding: 15px 25px 10px 25px; }
+  .popbox .material-icons.closebtn {
+    position: absolute;
+    right: 5px;
+    top: 6px;
+    cursor: pointer; }
 
 .cover {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 100%;
   min-height: 100%;
-  background-color: #757575;
+  background-color: #212121;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
   /* IE 5-7 */
   filter: alpha(opacity=60);
@@ -2655,6 +2677,8 @@ table.contact-table {
   /* Good browsers */
   opacity: 0.6;
   z-index: 10000; }
+  .cover.active {
+    display: block; }
 
 .news-area {
   margin-top: 119px;
@@ -2749,13 +2773,10 @@ table.contact-table {
         line-height: 16px; }
       .right-new-panel .card-h .txt .sub {
         font-size: 14px; }
-    .right-new-panel .card-h .img {
+    .right-new-panel .card-h .img, .right-new-panel .card-h .img img {
       width: 149.99px;
-      height: 98px; }
-      .right-new-panel .card-h .img img {
-        display: block;
-        width: 100%;
-        height: 100%; }
+      height: 98px;
+      overflow: hidden; }
 
 #orslideshow {
   padding: 30px 0 30px 0; }
@@ -2790,13 +2811,16 @@ table.contact-table {
 #slick-right {
   background-image: url(../img/btn/ic_keyboard_arrow_right_black_24dp_2x.png); }
 
+.tele-content.wrapper-960 {
+  margin-top: 97px; }
+
 .sidebar {
   position: fixed;
   display: block;
   float: left;
   height: 100%;
-  top: 97px;
   width: 300px;
+  padding: 5px 0 100px 5px;
   *zoom: 1;
   overflow-y: scroll; }
   .sidebar:before, .sidebar:after {
@@ -2836,7 +2860,6 @@ table.contact-table {
     clear: both; }
 
 #contacts-content {
-  top: 97px;
   margin-bottom: 150px; }
 
 /*# sourceMappingURL=intranet.css.map */
